--- a/_config.yml
+++ b/_config.yml
@@ -2,22 +2,20 @@
 #
 
 # Site settings
-title: Spectral
+title: Vaani
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
+  Vaani the voice of IoT  
+owner: Mozilla
 first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
-baseurl: "/spectral" # the subpath of your site, e.g. /blog
-url: "http://arkadianriver.github.io" # the base hostname & protocol for your site
+email: info@vaani.io
+#baseurl: "/spectral" # the subpath of your site, e.g. /blog
+url: "https://github.com/mozilla/vaani.iot" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  twitter: https://twitter.com/IotVaani
+  github: https://github.com/mozilla/vaani.iot
+  facebook-official: https://www.facebook.com/vaani.iot
+  #linkedin-square: https://linkedin.com/in/<username>
+  #google-plus-square: https://plus.google.com/u/0/+<username>
   #email: /contact/
   #flickr:
   #instagram:
