--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: info@vaani.io
 #baseurl: "/spectral" # the subpath of your site, e.g. /blog
 url: "https://github.com/mozilla/vaani.iot" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/IotVaani
+  twitter: https://twitter.com/project_vaani
   github: https://github.com/mozilla/vaani.iot
   facebook-official: https://www.facebook.com/vaani.iot
   #linkedin-square: https://linkedin.com/in/<username>
